adding funny eyes

--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -1,32 +1,29 @@
-@import url('https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap');
+
 
 
 body {
 
-background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(https://media.giphy.com/media/OK5LK5zLFfdm/giphy.gif)
+/* background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(https://media.giphy.com/media/OK5LK5zLFfdm/giphy.gif)
     center no-repeat fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -ms-background-size: cover;
-  background-size: cover;
+  background-size: cover; */
 }
 
 
-h1{
-font-family: 'Kaushan Script', cursive;
-color: #a0cc93
-}
+
 
 table {
   text-align: center;
   margin: 100px auto 0;
-
+background-color: #94bd88;
 margin-top: 50px;
 }
 
 td {
-width: 150px;
-height: 150px;
+width: 120px;
+height: 120px;
 border: 3px solid #73bd5e;
 }
 
@@ -88,16 +85,15 @@ color: #a0cc93;
 .container {
   text-align: center;
   margin: 60px auto 0;
-  animation-iteration-count: 2;
 }
 
-#reset {
+a {
   display: inline-block;
   background-color: #a0cc93;
   color: #fff;
-  font-size: 1.5em;
+  font-size: 1em;
   font-family: Courier, sans-serif;
-  padding: 0.7em 2.5em;
+  padding: 0.5em 1.7em;
   text-decoration: none;
   text-transform: uppercase;
   border-radius: 0.4em;
@@ -109,7 +105,7 @@ color: #a0cc93;
   position: relative;
 }
 
-#reset:hover {
+a:hover {
   background-color: #77b066;
   border-bottom-width: 0;
   margin-top: 0.2em;
@@ -130,68 +126,11 @@ position: fixed;
     right: 75%;
 }
 
-
-#teamPick {
-  background-color: azure;
-  width: 40%;
-  border-radius: 27px;
-  padding-left: 21px;
-
-}
-
-.modal {
-
-  /*  display: none;  /* Hidden by default */ */
-position: fixed; /* Stay in place */
-z-index: 1; /* Sit on top */
-padding-top: 100px; /* Location of the box */
-left: 0;
-top: 0;
-width: 100%; /* Full width */
-height: 100%; /* Full height */
-overflow: auto; /* Enable scroll if needed */
-background-color: rgb(0,0,0); /* Fallback color */
-background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-    background-color: #d9d9d9;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 30%;
-}
-
-#userpick
-{
-  text-align: center;
-}
-
-#userpick button
-{
-  width: 150px;
-  height: 120px;
-  font-size: 80px;
-  transition: all 0.4s ease 0s;
-
-}
-#userpick button:hover
-{
-  background: #cc6600;
-}
-
-.imgbuttons {
-  width: 150px;
-  height: 120px;
-
-}
 /* .left {
 height: 500px;
 border-left: 5px solid green;
 margin-left: 200px
 }
-
 .right {
 height: 500px;
 border-left: 5px solid green;
@@ -209,37 +148,30 @@ margin-left:600px;
 
 /* @import url(http://fonts.googleapis.com/css?family=Oleo+Script);
 @import url(http://fonts.googleapis.com/css?family=Ruluko);
-
 #content {
   margin: 0 auto;
   text-align: center;
   width: 700px;
 }
-
 #nav {
   margin: 50px 0px;
 }
-
 #title {
   color: #F52F4F;
   font-family: 'Oleo Script', cursive;
   font-size: 50px;
 }
-
 #checking {
   float: left;
 }
-
 #savings {
   float: right;
 }
-
 .account {
   background-color: #6C9A74;
   border: 1px solid #295A33;
   padding: 10px;
 }
-
 .balance {
   background-color: #E3E3E3;
   border: 1px solid #676767;
@@ -247,12 +179,50 @@ margin-left:600px;
   font-size: 50px;
   padding: 25px 0;
 }
-
 .clear {
   clear: both;
 }
-
 .zero {
   background-color: #F52F4F;
   color: #FFF;
 } */
+
+.move-area{
+  width: 150px;
+  height: 150px;
+  padding: 10% 45%;
+}
+.container {
+  width: 100%;
+}
+.eye {
+  position: relative;
+  display: inline-block;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  background: #CCC;
+
+}
+
+.mouth {
+  position: relative;
+  top: 40px;
+  right: 49px;
+  display: inline-block;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  background: #CCC;
+}
+
+.eye:after { /*pupil*/
+  position: absolute;
+  bottom: 17px;
+  right: 10px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  content: " ";
+  background: blue;
+}
