--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -9,6 +9,7 @@
   -webkit-transform: scale(1.1);
           -ms-transform: scale(1.1);
           transform: scale(1.1);
+          cursor: pointer;
 
 }
 
@@ -344,7 +345,7 @@ position: relative;
 
 .bubbles h1 {
 /* position: relative; */
-font-size: 50px;
+font-size: 60px;
 margin: 1em 0 0;
 color: #94bd88;
 z-index: 2;
