--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -43,8 +43,8 @@ margin-top: 10px;
 td {
 width: 160px;
 height: 160px;
-border: 5px solid #73bd5e;
-box-shadow: 0 10px 3px #4dff88;
+border: 5px solid #5b924c;
+box-shadow: 0 10px 3px #449a60;
 }
 
 .border-top {
@@ -96,6 +96,7 @@ font-weight: bold;
 .container {
   text-align: center;
   /* margin: 60px auto 0; */
+  letter-spacing: 9px;
   font-family: 'Luckiest Guy', cursive;
 }
 
@@ -140,11 +141,6 @@ bottom: 50%;
 left: 82%;
 }
 
-
-h1 {
-color: #94bd88;
-
-}
 
 
 h2{
@@ -193,19 +189,20 @@ moving face player 1
   position: relative;
   display: inline-block;
   border-radius: 50%;
-  height: 30px;
-  width: 30px;
+  height: 31px;
+  width: 31px;
   background: #CCC;
   left: 12px;
-    top: 5px;
+    top: 9px;
 }
 
 .mouth {
   position: relative;
-  top: 40px;
-  right: 49px;
+  top: 24px;
+  right: 7px;
   display: inline-block;
   border-radius: 50%;
+  border: 4px solid red;
   height: 30px;
   width: 30px;
   background: #CCC;
@@ -213,8 +210,8 @@ moving face player 1
 
 .mouth2 {
   position: relative;
-  top: 45px;
-  right: 49px;
+  top: 14px;
+  right: 6px;
   display: inline-block;
   /* border-radius: 60%; */
   height: 30px;
@@ -222,7 +219,7 @@ moving face player 1
 font-family: 'Sniglet', cursive;
    background: #c68642;
    color:red;
-   font-size: 2em;
+   font-size: 3em;
    font-weight: bold;
    text-align: center;
    border-radius: 5px;
@@ -326,12 +323,13 @@ font-size: 50px;
 margin: 1em 0 0;
 color: #94bd88;
 z-index: 2;
+color: #94bd88;
 }
 
 .individual-bubble {
 position: absolute;
 border-radius: 100%;
-bottom: 15px;
+bottom: 20px;
 background-color: #94bd88;
 z-index: 1;
 }
